# yopo

./: README.md  README_CN.md
uav_monocular_nav/: CMakeLists.txt  package.xml
uav_monocular_nav/config/: camera_info.yaml  obstacles.json
uav_monocular_nav/launch/: data_collection.launch  inference.launch
uav_monocular_nav/rviz/: nav_visualization.rviz
uav_monocular_nav/scripts/: data_collector.py  inference_node.py  simple_uav_controller.py
uav_monocular_nav/training/: dataset_tools.py  losses.py  models.py  quintic.py  train_planner.py  train_segmentation.py
